fix(styles) remove visibility style form class alert

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -190,7 +190,3 @@ background-color: #d1d1d1;
   margin-top: 4px;
 }
 
-.alert {
- display: block;
- visibility: hidden;
-}
